--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: homepage
-title: Mere Blog Theme
-subtitle: This is the demo site for the Mere Blog Theme
+title: 邬 昌 先
+subtitle: 群 鸿 戏 海，舞 鹤 游 天
 image: /img/home.jpg
 hero_image: /img/home.jpg
 hero_height: is-large
