--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: homepage
 title: 邬 昌 先
 subtitle: 群 鸿 戏 海，舞 鹤 游 天
-image: /img/home.jpg
-hero_image: /img/home.jpg
+image: /img/pic.png
+hero_image: /img/pic.png
 hero_height: is-large
 ---
 
