--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: homepage
 title: 邬 昌 先
 subtitle: 群 鸿 戏 海，舞 鹤 游 天
-image: /img/pic2.png
-hero_image: /img/pic2.png
+image: /img/pic.jpg
+hero_image: /img/pic.jpg
 hero_height: is-large
 ---
 
