--- a/index.html
+++ b/index.html
@@ -9,4 +9,9 @@ hero_height: is-large
 
 
 
-笔名<strong>雲中鶴</strong>，江西丰城人。历任中国书画界联合会会员、中国书法艺术研究委员会会员,现为<strong>浙江省义乌市云山书画院主讲</strong>。受家庭熏陶，自幼酷爱书法，初承家学，临池不缀，稍年长，遍临各家书体，近年来略有寸进，略见机杼。最为擅长楷书，行草。
+<strong>邬昌先</strong>，笔名<strong>雲中鶴</strong>，江西丰城人。<br />
+<br />
+历任中国书画界联合会会员、中国书法艺术研究委员会会员,现为<strong>浙江省义乌市云山书画院主讲</strong>。<br />
+<br />
+受家庭熏陶，自幼酷爱书法，初承家学，临池不缀，稍年长，遍临各家书体，近年来略有寸进，略见机杼。最为擅长楷书，行草。<br />
+<br />
